fix(button): disabled on safari

--- a/src/index.css
+++ b/src/index.css
@@ -63,6 +63,14 @@ button {
   border-radius: 10px;
   box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
   cursor: pointer;
+  appearance: none;
+  -webkit-appearance: none;
+}
+
+.button:disabled {
+  opacity: 0.65;
+  appearance: none;
+  -webkit-appearance: none;
 }
 
 .material-symbols-outlined.stats {
