--- a/src/pages/quiz/Quiz.module.scss
+++ b/src/pages/quiz/Quiz.module.scss
@@ -50,9 +50,6 @@
   button {
     margin-top: 15px;
   }
-  button:disabled {
-    opacity: 0.65;
-  }
 }
 
 .wordChoices {
